<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>frucking_friction</name>
    <version>0.0.0</version>
    <description>Sample robot</description>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>gazebo_ros</depend>
    <depend>gazebo_plugins</depend>
    <depend>xacro</depend>
    <depend>robot_state_publisher</depend>
    <depend>teleop_twist_keyboard</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
